--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chacha Nehru</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
 
+        header {
+            background-color: #004d99;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .container img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto 20px;
+        }
+
+        h2 {
+            color: #004d99;
+        }
+
+        p {
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+
+            .container {
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5em;
+            }
+
+            p {
+                font-size: 0.9em;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Chacha Nehru</h1>
+    </header>
+
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Jawaharlal_Nehru.jpg/800px-Jawaharlal_Nehru.jpg" alt="Jawaharlal Nehru">
+        
+        <h2>About Jawaharlal Nehru</h2>
+        <p>Jawaharlal Nehru, affectionately called Chacha Nehru, was the first Prime Minister of India and a central figure in Indian politics before and after independence. He was a key leader of the Indian National Congress and a close associate of Mahatma Gandhi.</p>
+
+        <h2>Early Life</h2>
+        <p>Born on 14th November 1889, in Allahabad, Nehru was educated in England and later returned to India to practice law. However, he was soon drawn into the Indian independence movement, becoming a prominent leader and advocate for India's self-rule.</p>
+
+        <h2>Legacy</h2>
+        <p>Nehru's contributions to India were immense. He laid the foundation for a secular, socialist, and democratic republic. He is remembered for his love for children, and his birthday is celebrated as Children's Day in India.</p>
+    </div>
+</body>
+</html>
