--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Jawaharlal_Nehru.jpg/800px-Jawaharlal_Nehru.jpg" alt="Jawaharlal Nehru">
+        <img src="IMG_20211114_093232.jpg" alt="Jawaharlal Nehru">
         
         <h2>About Jawaharlal Nehru</h2>
         <p>Jawaharlal Nehru, affectionately called Chacha Nehru, was the first Prime Minister of India and a central figure in Indian politics before and after independence. He was a key leader of the Indian National Congress and a close associate of Mahatma Gandhi.</p>
